Adding reference to gitter room to README

--- a/README
+++ b/README
@@ -13,3 +13,6 @@ Currently we're trying to find all the required plugins.
 To get started, make a file called vagrant.yml in config using vagrant.yml.example as a template. To start the vm and get the provisioning going run the following command in the root project directory:
 
 vagrant up --provision
+
+
+[![Gitter](https://badges.gitter.im/mill-road-winter-fair/community.svg)](https://gitter.im/mill-road-winter-fair/community?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge)
